--- a/index.html
+++ b/index.html
@@ -4,75 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Solución taller puntos 4 - 11</title>
+    <title>Solución Taller Front-end</title>
 </head>
 <body>
-    <section id="punto4">
-      <strong>Punto 4</strong>
-        <h2 class="azul">Soy Azul</h2>
-        <h2 class="rojo">Soy Rojo</h2>
-    </section>
-    <hr>
-    <section id="punto5">
-      <strong>Punto 5</strong>
-        <p>En el momento en que <span class="p1">entiendo verdaderamente</span> a mi <span class="p2">enemigo</span>,
-            en el momento en que le <span class="p3">entiendo</span> lo suficientemente bien como para
-            <span class="p4">derrotarle</span>, entonces, en ese preciso instante, <span class="p5">también le</span> <span class="p6">quiero</span>
-        </p>
-    </section>
-    <hr>
-    <section id="punto6">
-      <strong>Punto 6</strong>
-        <h1>Enlaces, link and hover</h1>
-        <a class="diario1" href="https://www.marca.com/" target="_blank">Ir a Marca</a>
-        <br>
-        <a class="diario2" href="https://colombia.as.com/" target="_blank">Ir a AS</a>
-    </section>
-    <hr>
-    <section id="punto7">
-      <strong>Punto 7</strong>
-       <nav>
-            <ul>
-                <li>
-                    <i>Inicio</i>
-                </li>
-                <li>
-                    <i>¿Quienes Somos?</i>
-                </li>
-                <li>
-                    <i>Contacto</i>
-                </li>
-            </ul>
-       </nav>
-    </section>
-    <hr>
-    <section id="punto8">
-      <strong>Punto 8</strong>
-        <table>
-            <thead>
-                <tr>
-                    <th>Edad</th>
-                    <th>Peso</th>
-                </tr>
-                <tbody>
+    <div>
+        <header>Solución taller puntos 4 - 11</header>
+        <section id="punto4">
+            <h1>Punto 4.</h1>
+            <h3 class="azul">Soy Azul</h3>
+            <h3 class="rojo">Soy Rojo</h3>
+        </section>
+        <hr>
+        <section id="punto5">
+            <h1>Punto 5.</h1>
+            <p>En el momento en que <span class="p1">entiendo verdaderamente</span> a mi <span class="p2">enemigo</span>,
+                en el momento en que le <span class="p3">entiendo</span> lo suficientemente bien como para
+                <span class="p4">derrotarle</span>, entonces, en ese preciso instante, <span class="p5">también le</span> <span class="p6">quiero</span>
+            </p>
+        </section>
+        <hr>
+        <section id="punto6">
+            <h1>Punto 6.</h1>
+            <h2>Enalces, link and hover</h2>
+            <a class="diario1" href="https://www.marca.com/" target="_blank">Ir a Marca</a>
+            <br>
+            <a class="diario2" href="https://colombia.as.com/" target="_blank">Ir a AS</a>
+        </section>
+        <hr>
+        <section id="punto7">
+            <h1>Punto 7.</h1>
+        <nav>
+                <ul>
+                    <li><i>Inicio</i></li>
+                    <li><i>¿Quienes Somos?</i></li>
+                    <li><i>Contacto</i></li>
+                </ul>
+        </nav>
+        </section>
+        <hr>
+        <section id="punto8">
+            <h1>Punto 8.</h1>
+            <table>
+                <thead>
                     <tr>
-                        <td>40</td>
-                        <td>78</td>
+                        <th>Edad</th>
+                        <th>Peso</th>
                     </tr>
-                    <tr>
-                        <td>53</td>
-                        <td>76</td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">En el momento en que entiendo verdaderamente a mi enemigo,
-                            en el momento en que le entiendo lo suficientemente bien como para
-                            derrotarle, entonces, en ese preciso instante, también le quiero
-                        </td>
-                    </tr>
-                </tbody>
-            </thead>
-        </table>
-    </section>
-    
+                    <tbody>
+                        <tr>
+                            <td>40</td>
+                            <td>78</td>
+                        </tr>
+                        <tr>
+                            <td>53</td>
+                            <td>76</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">En el momento en que entiendo verdaderamente a mi enemigo,
+                                en el momento en que le entiendo lo suficientemente bien como para
+                                derrotarle, entonces, en ese preciso instante, también le quiero
+                            </td>
+                        </tr>
+                    </tbody>
+                </thead>
+            </table>
+        </section>
+        <footer>Estudiante: Roberto Carlos</footer>
+    </div>
 </body>
 </html>
